k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-nginx
  template:
    metadata:
      labels:
        app: devops-nginx
    spec:
      containers:
      - name: devops-nginx
        image: devtrain42/devops-nginx:16
        ports:
          - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
