k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-nginx-service
spec:
  type: NodePort
  selector:
    app: devops-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
